# api-python-instagram

./: .env  .env.example  Dockerfile  README.md  api-instagram  app.py  main.py  pyproject.toml  script-instagram.js
.github/workflows/: build.yml  deploy.yml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  rbac-github-deployer.yaml  secret-instagram.yaml  service.yaml
src/: check_structure.py
src/app/: __init__.py  config.py  extensions.py  init.py  logging_config.py  quick_fix.py  test_endpoints.py
src/app/routes/: admin.py  google.py  health.py  instagram.py  static_files.py
src/app/services/: cache.py  http.py  instagram.py  media_cache.py  warmup.py
src/app/static/feeds/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  widget-example.html
src/app/static/feeds/src/: App.vue  main.css  widget-loader.ts
src/app/static/feeds/src/components/: InstagramWidget.vue
src/app/static/instagram/: core-service-p-boot.json  eapps.json  index.html  instagram.js  instashow.js  widget-data-service-api-posts.json  widget-data-service-profile.json
static/: bridge.js  main.css
static/instagram/: core-service-p-boot.json  index.html  instagram-api.js  instagram.js  instashow.js  widget-data-service-api-posts-2.json
vue-instagram-widgets/: index.html  package-lock.json  package.json  vite.config.js
vue-instagram-widgets/src/: main.js
vue-instagram-widgets/src/components/: ElfsightFeed.vue  Servicos.vue
