[tool.poetry]
name = "api-python-instagram"
version = "0.1.0"
description = ""
authors = ["Rafael Santos <rafael.silva@gran.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.1"
requests = "^2.32.3"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
